Fixing allInstances method for Java types