@@ -2,6 +2,7 @@ package it.unive.jlisa.program.type;
 import it.unive.lisa.type.Type;
 import it.unive.lisa.type.TypeSystem;
 
+import java.util.Collections;
 import java.util.Set;
 
 public class JavaByteType implements JavaNumericType {
@@ -43,6 +44,6 @@ public class JavaByteType implements JavaNumericType {
 
     @Override
     public Set<Type> allInstances(TypeSystem types) {
-        return Set.of();
+        return Collections.singleton(this);
     }
 }
