@@ -3,6 +3,7 @@ package it.unive.jlisa.program.type;
 import it.unive.lisa.type.Type;
 import it.unive.lisa.type.TypeSystem;
 
+import java.util.Collections;
 import java.util.Set;
 
 public class JavaFloatType implements JavaNumericType {
@@ -32,7 +33,7 @@ public class JavaFloatType implements JavaNumericType {
 
     @Override
     public Set<Type> allInstances(TypeSystem types) {
-        return Set.of();
+        return Collections.singleton(this);
     }
 
     @Override
