@@ -3,6 +3,7 @@ package it.unive.jlisa.program.type;
 import it.unive.lisa.type.Type;
 import it.unive.lisa.type.TypeSystem;
 
+import java.util.Collections;
 import java.util.Set;
 
 public class JavaShortType implements JavaNumericType {
@@ -15,10 +16,9 @@ public class JavaShortType implements JavaNumericType {
         return "short";
     }
 
-
     @Override
     public Set<Type> allInstances(TypeSystem types) {
-        return Set.of();
+        return Collections.singleton(this);
     }
 
     @Override
